# sentiment_transformer

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docs/: QUICKSTART.md
resources/: inference_service.yaml  serving_runtime.yaml
sentiment_transformer/: __init__.py  transformer.py
